# fastapi_example

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt
app/application/: auth.py  deps.py  item_service.py  user_service.py
app/domain/: item.py  item_repository.py  user.py  user_repository.py
app/infrastructure/: db.py  item_repository_sqlalchemy.py  models.py  user_repository_sqlalchemy.py
app/interfaces/: api.py  schemas.py
app/test/: test_api.py
src/: config.py
src/app/: main.py
src/app/application/: auth.py  deps.py  item_service.py  user_service.py
src/app/domain/: item.py  item_repository.py  user.py  user_repository.py
src/app/infrastructure/: db.py  item_repository_sqlalchemy.py  models.py  user_repository_sqlalchemy.py
src/app/infrastructure/mappers/: item.py  user.py
src/app/infrastructure/models/: item.py  user.py
src/app/infrastructure/orm/: item_repository_sqlalchemy.py  user_repository_sqlalchemy.py
src/app/infrastructure/repositories/: item_repository.py  user_repository.py
src/app/interfaces/: api.py  schemas.py
src/app/services/: item_service.py  user_service.py
src/myapp/: main.py
src/myapp/application/: auth.py  deps.py
src/myapp/infrastructure/: db.py
src/myapp/infrastructure/mappers/: item.py  user.py
src/myapp/infrastructure/models/: item.py  user.py
src/myapp/infrastructure/orm/: item_repository_sqlalchemy.py  user_repository_sqlalchemy.py
src/myapp/infrastructure/repositories/: item_repository.py  user_repository.py
src/myapp/interfaces/: api.py  schemas.py
src/myapp/services/: item_service.py  user_service.py
src/project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: conftest.py  test_api.py
tests/: conftest.py  test_api.py  test_item_repository.py
