[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi_example"
description = 'fastapi example project'
authors = [{name = 'voylaf'}]
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "email-validator",
    "pydantic-settings",
    "starlette",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.3.0",
    "pytest",
    "httpx",
    "regex",
    "python-multipart",
    "hypothesis",
    "black (>=26.1.0,<27.0.0)",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100           # длина строки
skip-string-normalization = true  # не трогать кавычки
target-version = ["py314"]  # версия Python
include = '\.pyi?$'         # форматировать только .py и .pyi
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
package-mode = false