[project]
name = "fastapi_example"
version = "0.0.1"
description = "fastapi example project"
authors = [{ name = "voylaf" }]
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "email-validator",
    "pydantic-settings",
    "starlette",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.3.0",
    "pytest",
    "httpx",
    "regex",
    "python-multipart",
    "hypothesis",
    "black (>=26.1.0,<27.0.0)",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py314"]
include = '\.pyi?$'         # format only .py и .pyi
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
pythonpath = ["src"]
