[project]
name = "fastapi_example"
version = "0.0.1"
description = "fastapi example project"
authors = [{ name = "voylaf" }]
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "email-validator",
    "pydantic-settings",
    "starlette",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.3.0",
    "pytest",
    "httpx",
    "regex",
    "python-multipart",
    "hypothesis",
    "black (>=26.1.0,<27.0.0)",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100
indent-width = 4
target-version = "py314"

exclude = [
    "git",
    "mypy_cache",
    "venv",
    "build",
    "dist",
    "src/tests/**"
]

[tool.ruff.lint]
select = [
    "RET",
    "E",
    "F",
    "I",
    "TID",
    "FAST",
]

fixable = [
    "I", # import sorting
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
